[package]
name = "vault"
version = "0.1.0"
authors = ["sirkibsirkib <christopher.esterhuyse@gmail.com>"]

[dependencies]
rust-crypto = "0.2"
rand = "0.5"
serde_derive = "1.0"
bincode = "1.0"
serde = "1.0.64"
base64 = "0.9.1"
chrono = { version = "0.4", features = ["serde"] }
rpassword = "2.0.0"
serde_json = "1.0.19"
fnv = "1.0.6"